demo/deploy/proxy.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: frame-explorer-proxy
  labels:
    app: frame-explorer
    tier: proxy

spec:
  selector:
    matchLabels:
      app: frame-explorer
      tier: proxy
  template:
    metadata:
      labels:
        app: frame-explorer
        tier: proxy
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: frame-explorer-proxy
      containers:
        - name: proxy
          image: nginx:alpine
          ports:
            - name: fe-port
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              subPath: nginx.conf
              mountPath: /etc/nginx/nginx.conf
              readOnly: true
          readinessProbe:
            httpGet:
              path: /
              port: fe-port
      restartPolicy: Always
---
apiVersion: v1

kind: Service

metadata:
  name: frame-explorer

spec:
  selector:
    app: frame-explorer
    tier: proxy
  ports:
    - port: 80
      targetPort: fe-port
